--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -23,20 +23,20 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #2E3336 !default;
-$examples-bg: #2E3336 !default;
-$code-bg: #1E2224 !default;
-$code-annotation-bg: #191D1F !default;
-$nav-subitem-bg: #1E2224 !default;
+$nav-bg: #CFEFFF !default;
+$examples-bg: #CFEFFF !default;
+$code-bg: #0052A3 !default;
+$code-annotation-bg: #0F75D4 !default;
+$nav-subitem-bg: #2196F3 !default;
 $nav-active-bg: #0F75D4 !default;
-$nav-active-parent-bg: #1E2224 !default; // parent links of the current section
+$nav-active-parent-bg: #2196F3 !default; // parent links of the current section
 $lang-select-border: #000 !default;
-$lang-select-bg: #1E2224 !default;
+$lang-select-bg: #2196F3 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
 $main-bg: #F3F7F9 !default;
-$aside-notice-bg: #8fbcd4 !default;
-$aside-warning-bg: #c97a7e !default;
+$aside-notice-bg: #68CE8C !default;
+$aside-warning-bg: #F36666 !default;
 $aside-success-bg: #6ac174 !default;
 $search-notice-bg: #c97a7e !default;
 
