--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -23,7 +23,7 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #CFEFFF !default;
+$nav-bg: #3FB0FC !default;
 $examples-bg: #CFEFFF !default;
 $code-bg: #0052A3 !default;
 $code-annotation-bg: #0F75D4 !default;
@@ -31,7 +31,7 @@ $nav-subitem-bg: #2196F3 !default;
 $nav-active-bg: #0F75D4 !default;
 $nav-active-parent-bg: #2196F3 !default; // parent links of the current section
 $lang-select-border: #000 !default;
-$lang-select-bg: #2196F3 !default;
+$lang-select-bg: #0F75D4 !default;
 $lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
 $main-bg: #F3F7F9 !default;
