--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -30,10 +30,10 @@ $code-annotation-bg: #0F75D4 !default;
 $nav-subitem-bg: #2196F3 !default;
 $nav-active-bg: #0F75D4 !default;
 $nav-active-parent-bg: #2196F3 !default; // parent links of the current section
-$lang-select-border: #000 !default;
+$lang-select-border: #0F75D4 !default;
 $lang-select-bg: #0F75D4 !default;
-$lang-select-active-bg: $examples-bg !default; // feel free to change this to blue or something
-$lang-select-pressed-bg: #111 !default; // color of language tab bg when mouse is pressed
+$lang-select-active-bg: #0F75D4 !default; // feel free to change this to blue or something
+$lang-select-pressed-bg: #0052A3 !default; // color of language tab bg when mouse is pressed
 $main-bg: #F3F7F9 !default;
 $aside-notice-bg: #68CE8C !default;
 $aside-warning-bg: #F36666 !default;
