--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -34,7 +34,7 @@ $lang-select-border: #0F75D4 !default;
 $lang-select-bg: #0F75D4 !default;
 $lang-select-active-bg: #0F75D4 !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #0052A3 !default; // color of language tab bg when mouse is pressed
-$main-bg: #F3F7F9 !default;
+$main-bg: #fff !default;
 $aside-notice-bg: #68CE8C !default;
 $aside-warning-bg: #F36666 !default;
 $aside-success-bg: #6ac174 !default;
