--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -30,9 +30,9 @@ $code-annotation-bg: #0F75D4 !default;
 $nav-subitem-bg: #2196F3 !default;
 $nav-active-bg: #0F75D4 !default;
 $nav-active-parent-bg: #2196F3 !default; // parent links of the current section
-$lang-select-border: #0F75D4 !default;
+$lang-select-border: #0052A3 !default;
 $lang-select-bg: #0F75D4 !default;
-$lang-select-active-bg: #0F75D4 !default; // feel free to change this to blue or something
+$lang-select-active-bg: #0052A3 !default; // feel free to change this to blue or something
 $lang-select-pressed-bg: #0052A3 !default; // color of language tab bg when mouse is pressed
 $main-bg: #fff !default;
 $aside-notice-bg: #68CE8C !default;
