--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -38,7 +38,7 @@ $main-bg: #fff !default;
 $aside-notice-bg: #68CE8C !default;
 $aside-warning-bg: #F36666 !default;
 $aside-success-bg: #6ac174 !default;
-$search-notice-bg: #c97a7e !default;
+$search-notice-bg: #fff !default;
 
 
 // TEXT COLORS
