--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -83,9 +83,9 @@ html, body {
     position: relative;
 
     input {
-      background: $nav-bg;
+      background: #fff;
       border-width: 0 0 1px 0;
-      border-color: $search-box-border-color;
+      border-color: #fff;
       padding: 6px 0 6px 20px;
       box-sizing: border-box;
       margin: $nav-v-padding $nav-padding;
