--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -27,7 +27,7 @@ $nav-bg: #3FB0FC !default;
 $examples-bg: #CFEFFF !default;
 $code-bg: #0052A3 !default;
 $code-annotation-bg: #0F75D4 !default;
-$nav-subitem-bg: #2196F3 !default;
+$nav-subitem-bg: #0052A3 !default;
 $nav-active-bg: #0F75D4 !default;
 $nav-active-parent-bg: #2196F3 !default; // parent links of the current section
 $lang-select-border: #0052A3 !default;
